# mkdocs-markdoc

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
example/: markdoc.config.js  mkdocs.yml
example/docs/: callout.md  code.md  guide.md  index.md  showcase.md
example/docs/javascripts/: hljs-init.js
mkdocs_markdoc/: __init__.py  markdoc_runner.js  plugin.py
mkdocs_markdoc/assets/: markdoc.css
